--- a/index.html
+++ b/index.html
@@ -13,24 +13,52 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/main.css" type="text/css">
+
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+  <div class="container">
+    
+    <!-- card 1 -->
+    <div class="card">
+      <h1 class="card__title">Sedans</h1>
+      <p class="card__desc">
+        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+        or on your next road trip.
+      </p>
+      <a href="#" class="card__button--orange">Learn More</a>
+    </div>
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+    <!-- card 2 -->
+    <div class="card">
+      <h1 class="card__title">Suvs</h1>
+      <p class="card__desc">
+        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        and off-road adventures.
+      </p>
+      <a href="#" class="card__button--cyan">Learn More</a>
+    </div>
+
+    <!-- card 3 -->
+    <div class="card">
+      <h1 class="card__title">Luxury</h1>
+      <p class="card__desc">
+        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        rental and arrive in style.
+      </p>
+      <a href="#" class="card__button--darker-cyan">Learn More</a>
+    </div>
+
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Joel Ramos</a>.
   </div>
 </body>
 </html>
