created files necessary for challenge

--- a/index.html
+++ b/index.html
@@ -6,21 +6,25 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | 3-column preview card component</title>
+  <title>Frontend Mentor | 3-column preview card component | Joel Ramos</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
-
+  
+  <!-- links to Google fonts for challenge -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&display=swap" rel="stylesheet">
 
+  <!-- link to main css file -->
   <link rel="stylesheet" href="css/main.css" type="text/css">
 
 </head>
-<body>
+<body class="wrapper">
 
   <div class="container">
     
