--- a/index.html
+++ b/index.html
@@ -1,68 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | 3-column preview card component | Joel Ramos</title>
+        <title>
+            Frontend Mentor | 3-column preview card component | Joel Ramos
+        </title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  
-  <!-- links to Google fonts for challenge -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&display=swap" rel="stylesheet">
+        <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+        <style>
+            .attribution {
+                font-size: 11px;
+                text-align: center;
+            }
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+        </style>
 
-  <!-- link to main css file -->
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+        <!-- links to Google fonts for challenge -->
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
 
-</head>
-<body class="wrapper">
+        <!-- link to main css file -->
+        <link rel="stylesheet" href="css/main.css" type="text/css" />
+    </head>
+    <body>
+        <main>
+            <div class="cards">
+                <!-- card 1 -->
+                <article class="card card--orange">
+                    <img
+                        src="images/icon-sedans.svg"
+                        alt="icon for a Sedan vehicle"
+                    />
+                    <h1 class="card__title">Sedans</h1>
+                    <p class="card__desc">
+                        Choose a sedan for its affordability and excellent fuel
+                        economy. Ideal for cruising in the city or on your next
+                        road trip.
+                    </p>
+                    <a href="#" class="card__button--orange">Learn More</a>
+                </article>
 
-  <div class="container">
-    
-    <!-- card 1 -->
-    <div class="card">
-      <h1 class="card__title">Sedans</h1>
-      <p class="card__desc">
-        Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-        or on your next road trip.
-      </p>
-      <a href="#" class="card__button--orange">Learn More</a>
-    </div>
+                <!-- card 2 -->
+                <article class="card card--dark-cyan">
+                    <img
+                        src="images/icon-suvs.svg"
+                        alt="icon for an SUV vehicle"
+                    />
+                    <h1 class="card__title">Suvs</h1>
+                    <p class="card__desc">
+                        Take an SUV for its spacious interior, power, and
+                        versatility. Perfect for your next family vacation and
+                        off-road adventures.
+                    </p>
+                    <a href="#" class="card__button--dark-cyan">Learn More</a>
+                </article>
 
-    <!-- card 2 -->
-    <div class="card">
-      <h1 class="card__title">Suvs</h1>
-      <p class="card__desc">
-        Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-        and off-road adventures.
-      </p>
-      <a href="#" class="card__button--cyan">Learn More</a>
-    </div>
-
-    <!-- card 3 -->
-    <div class="card">
-      <h1 class="card__title">Luxury</h1>
-      <p class="card__desc">
-        Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-        rental and arrive in style.
-      </p>
-      <a href="#" class="card__button--darker-cyan">Learn More</a>
-    </div>
-
-  </div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Joel Ramos</a>.
-  </div>
-</body>
+                <!-- card 3 -->
+                <article class="card card--darker-cyan">
+                    <img
+                        src="images/icon-luxury.svg"
+                        alt="icon for a luxury vehicle"
+                    />
+                    <h1 class="card__title">Luxury</h1>
+                    <p class="card__desc">
+                        Cruise in the best car brands without the bloated
+                        prices. Enjoy the enhanced comfort of a luxury rental
+                        and arrive in style.
+                    </p>
+                    <a href="#" class="card__button--darker-cyan">Learn More</a>
+                </article>
+            </div>
+        </main>
+    </body>
 </html>
